--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcsh 'Portugal -- Fiction'
 - !lcc 'PQ'
 - !lcsh 'Priests -- Portugal -- Fiction'
+- GITenberg
 title: O crime do padre Amaro, scenas da vida devota
 url: http://www.gutenberg.org/ebooks/31971
